Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 2.5.0
============================

2023-00-00 Jose Kahan
	* many files
	Removed compiler warnings detected by gcc -O2 -Wall

	* src/getname.c
	When a From: header had two email addresses, hypermail was
	always extracting the first one, regardless if it was in
	a comment, while the 2nd one was the valid one. In some
	cases that address could also include enclosing parenthesis
	Closes #85

	* src/setup.c
	Marked config options linkquotes as "deprecated, with intention to
	remove" ddue to corresponding code not being maintained anymore.

        New directive show_headers_msg_rfc822 useful if you want to
	fine-tune which headers you want to be displayed in message/rfc822
	attachments. If not declared, hypermail will use
	show_headers_msg for message/rfc822 attachments.

	* src/lock.c
	unlock_archive() wasn't removing the lockfile

	* src/string.c
	fixed a memory leak after calling obfuscated_email_address()

2022-10-26 Jose Kahan
	* src/getname.c
	Remove a potential writing out of bonds issue

2022-04-07 Jose Kahan
	* src/parse.c
	When parsing a mailbox, the code for skipping MIME epilogues wasn't
	detecting the start of the next message. Thanks to James Riordon and
	Christof Meerwald for reporting and pointing out where the issue was
	(closes #82).

2022-04-04 Jose Kahan
	* src/string.c
	We're now using iconv's transliteration flag when converting a string
	from UTF-8 to another charset, From the man page: "this means that when
	a character cannot be represented in the target character set, it can
	be approximated through one or several similarly looking characters."

2022-04-01 Jose Kahan
	* src/string.c src/utf8.h
	Integrated utf8.h to provide validation of UTF-8 strings

	When i18n_convstring is called to convert from UTF-8 to UTF-8, we
	skip the convertion, but we now replace invalid UTF-8 characters
	with a '?' character.

2022-03-30 Jose Kahan